core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/valid/Windows/Modes/mode07.wsmode
<?xml version="1.0" encoding="UTF-8"?>

<mode version="2.3">
    <name unique="mode07" />
    <kind type="view" />
    <state type="joined" />
    <constraints>
        <path orientation="vertical" number="0" weight="0.7" />
        <path orientation="horizontal" number="0" weight="0.3" />
    </constraints>
    <active-tc id="filesystems" prev-id="explorer"/>
    <empty-behavior permanent="true" />
</mode>
