core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/invalid/Windows/Modes/mode05.wsmode
<?xml version="1.0" encoding="UTF-8"?>

<mode version="2.4">
    <name unique="mode05"/>
    <kind type="sliding" />
    <state type="joined" minimized="true"/>
    <constraints>
        <path orientation="vertical" number="0" weight="0.7" />
        <path orientation="horizontal" number="0" weight="0.3" />
    </constraints>
    <active-tc id="filesystems" prev-id="explorer"/>
    <empty-behavior permanent="true" />
</mode>
